// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regex compiles escape char 1`] = `
"const regex = /.+\\\\/.+\\\\\\\\/;
Object.assign(module.exports, {
  regex
});"
`;

exports[`regex compiles multiline 1`] = `
"const regex = /(?<year>\\\\d{4})-(?<month>\\\\d{2})-(?<day>\\\\d{2})/gm;
Object.assign(module.exports, {
  regex
});"
`;

exports[`regex compiles single line 1`] = `
"const regex = /(?<year>\\\\d{4})-(?<month>\\\\d{2})-(?<day>\\\\d{2})/;
Object.assign(module.exports, {
  regex
});"
`;
